@@ -815,7 +815,7 @@ define('SEC_PER_MONTH', (30*SEC_PER_DAY));
 define('SEC_PER_YEAR', 	(365*SEC_PER_DAY));
 
 // input fields
-define('ZBX_TEXTBOX_STANDART_SIZE', 50);
+define('ZBX_TEXTBOX_STANDARD_SIZE', 50);
 define('ZBX_TEXTBOX_SMALL_SIZE', 25);
 
 // if magic quotes on, then get rid of them
