@@ -220,7 +220,7 @@ function update_config($configs){
 
 	if (isset($configs['work_period'])) {
 		if (!validate_period($configs['work_period'])) {
-			error(S_INCORRECT_WORK_PERIOD);
+			error(_s('Incorrect working time: "%s".', $configs['work_period']));
 			return false;
 		}
 	}
