@@ -12,6 +12,7 @@ New features:
  - [ZBX-1357] updated Dutch, German, Japanese, Russian, and Ukrainian translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+ - [ZBX-4058] fixed working time updating in Administration->Gneral->Working time (Vedmak)
  - [ZBX-4060] fixed error when save map with link updated to connect new element (Vedmak)
  - [ZBX-4166] fixed error in dashboard when configured to show unacknowledged only (Vedmak)
  - [ZBX-4003] fixed error when try to use not existing host group as group for discovered hosts (Vedmak)
